force-app/main/default/objects/Loan_Calculator__c/fields/Othee_post_moratorium__c.field-meta.xml
<CustomField>
    <fullName>Othee_post_moratorium__c</fullName>
    <label>Other post moratorium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maintain original loan term</fullName>
            </value>
            <value>
                <fullName>Extend original loan term by moratorium period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>