force-app/main/default/objects/Loan_Calculator__c/fields/Other_Financing__c.field-meta.xml
<CustomField>
    <fullName>Other_Financing__c</fullName>
    <label>Other Financing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>