force-app/main/default/objects/Loan_Calculator__c/fields/PC_Account_Hypothecated_for_another_Loan__c.field-meta.xml
<CustomField>
    <fullName>PC_Account_Hypothecated_for_another_Loan__c</fullName>
    <label>PC Account Hypothecated for another Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>