force-app/main/default/objects/Loan_Calculator__c/fields/PC_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>PC_Credit_Limit__c</fullName>
    <label>PC Credit Limit Currency</label>
    <type>Picklist</type>
</CustomField>