force-app/main/default/objects/Loan_Calculator__c/fields/PC_Credit_Limit_Amount__c.field-meta.xml
<CustomField>
    <fullName>PC_Credit_Limit_Amount__c</fullName>
    <label>PC Credit Limit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>