force-app/main/default/objects/Loan_Calculator__c/fields/PC_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>PC_Interest_Rate__c</fullName>
    <label>PC Interest Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>