force-app/main/default/objects/Loan_Calculator__c/fields/PC_Total_existing_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>PC_Total_existing_Loan_Balance__c</fullName>
    <label>PC Total existing Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>