force-app/main/default/objects/Loan_Calculator__c/fields/PC_Type_of_Cash_Secured_Collateral__c.field-meta.xml
<CustomField>
    <fullName>PC_Type_of_Cash_Secured_Collateral__c</fullName>
    <label>PC Type of Cash-Secured Collateral</label>
    <picklist>
        <picklistValues>
            <fullName>JN Bank - High Yield Account</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>JN Bank - Direct Gain Account</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>JNFM - Repurchase Agreement</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>JNFM - Mutual Fund</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>