force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Account_Hypothecated_another_Loan__c.field-meta.xml
<CustomField>
    <fullName>PCL_Account_Hypothecated_another_Loan__c</fullName>
    <label>PCL Account Hypothecated another Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>