force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>PCL_Collateral_Type__c</fullName>
    <label>PCL Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Collateral</valueSetName>
    </valueSet>
</CustomField>