force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Currency__c.field-meta.xml
<CustomField>
    <fullName>PCL_Currency__c</fullName>
    <label>PCL Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>