force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Deposit_Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>PCL_Deposit_Account_Balance__c</fullName>
    <label>PCL Deposit Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>