force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Hypothecated_Currency__c.field-meta.xml
<CustomField>
    <fullName>PCL_Hypothecated_Currency__c</fullName>
    <label>PCL Hypothecated Currency</label>
    <type>Picklist</type>
</CustomField>