force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>PCL_Interest_Rate__c</fullName>
    <label>PCL Interest Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>