force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>PCL_Requested_Credit_Limit__c</fullName>
    <label>PCL Requested Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>