force-app/main/default/objects/Loan_Calculator__c/fields/PCL_Total_Existing_Loan_Balance__c.field-meta.xml
<CustomField>
    <fullName>PCL_Total_Existing_Loan_Balance__c</fullName>
    <label>PCL Total Existing Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>