force-app/main/default/objects/Loan_Calculator__c/fields/Pior_to_Proposed_Credit__c.field-meta.xml
<CustomField>
    <fullName>Pior_to_Proposed_Credit__c</fullName>
    <label>Pior to Proposed Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>