force-app/main/default/objects/Loan_Calculator__c/fields/PLC_Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>PLC_Credit_Limit_Currency__c</fullName>
    <label>PLC Credit Limit Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>