force-app/main/default/objects/Loan_Calculator__c/fields/Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit__c</fullName>
    <label>Policy Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>