force-app/main/default/objects/Loan_Calculator__c/fields/Processing_Fees_including_GCT__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fees_including_GCT__c</fullName>
    <label>Processing Fees (including GCT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>