force-app/main/default/objects/Loan_Calculator__c/fields/Property_Classification__c.field-meta.xml
<CustomField>
    <fullName>Property_Classification__c</fullName>
    <label>Property Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Type</valueSetName>
    </valueSet>
</CustomField>