force-app/main/default/objects/Loan_Calculator__c/fields/Proposed_SavingsPercentage__c.field-meta.xml
<CustomField>
    <fullName>Proposed_SavingsPercentage__c</fullName>
    <label>Proposed Savings Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>