force-app/main/default/objects/Loan_Calculator__c/fields/Proposed_Starting_Limit__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Starting_Limit__c</fullName>
    <label>Proposed Starting Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>