force-app/main/default/objects/Loan_Calculator__c/fields/Rate_for_Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Rate_for_Legal_Fees__c</fullName>
    <label>Rate for Legal Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>