force-app/main/default/objects/Loan_Calculator__c/fields/Repayment_Method_LOC__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method_LOC__c</fullName>
    <label>Repayment Method LOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Repayment_Method</valueSetName>
    </valueSet>
</CustomField>