force-app/main/default/objects/Loan_Calculator__c/fields/Repayment_Method_UL__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Method_UL__c</fullName>
    <label>Repayment Method UL</label>
    <type>Picklist</type>
</CustomField>