force-app/main/default/objects/Loan_Calculator__c/fields/Reqeusted_Limit__c.field-meta.xml
<CustomField>
    <fullName>Reqeusted_Limit__c</fullName>
    <label>Requested Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>