force-app/main/default/objects/Loan_Calculator__c/fields/Requested_Limit_LOC__c.field-meta.xml
<CustomField>
    <fullName>Requested_Limit_LOC__c</fullName>
    <label>Requested Limit LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>