force-app/main/default/objects/Loan_Calculator__c/fields/Security_Address__c.field-meta.xml
<CustomField>
    <fullName>Security_Address__c</fullName>
    <label>Security Address</label>
    <length>40</length>
    <type>Text</type>
</CustomField>