force-app/main/default/objects/Loan_Calculator__c/fields/Single_Premium_Creditor_Life_Insu_A__c.field-meta.xml
<CustomField>
    <fullName>Single_Premium_Creditor_Life_Insu_A__c</fullName>
    <label>Finance Single Creditor Life Insure A</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>