force-app/main/default/objects/Loan_Calculator__c/fields/Staff1_Mthly_Loan_Payment_A_Moratorium__c.field-meta.xml
<CustomField>
    <fullName>Staff1_Mthly_Loan_Payment_A_Moratorium__c</fullName>
    <label>Staff1 Mthly Loan Payment A-Moratorium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>