force-app/main/default/objects/Loan_Calculator__c/fields/Staff2_Mthly_Loan_Payment_D_Moratorium__c.field-meta.xml
<CustomField>
    <fullName>Staff2_Mthly_Loan_Payment_D_Moratorium__c</fullName>
    <label>Staff2 Mthly Loan Payment D-Moratorium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>