force-app/main/default/objects/Loan_Calculator__c/fields/Staff_1_Interest_Rate_Auto__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Interest_Rate_Auto__c</fullName>
    <description>Staff 1 Interest Rate Auto</description>
    <label>Staff 1 Interest Rate Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>