force-app/main/default/objects/Loan_Calculator__c/fields/Staff_1_Loan_amount_and_calculations__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Loan_amount_and_calculations__c</fullName>
    <label>Staff 1 Loan amount and calculations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>