force-app/main/default/objects/Loan_Calculator__c/fields/Staff_1_Loan_term__c.field-meta.xml
<CustomField>
    <fullName>Staff_1_Loan_term__c</fullName>
    <label>Staff 2 Loan term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>