force-app/main/default/objects/Loan_Calculator__c/fields/Staff_2_Loan_Amount_Auto__c.field-meta.xml
<CustomField>
    <fullName>Staff_2_Loan_Amount_Auto__c</fullName>
    <description>Staff 2 Loan Amount Auto</description>
    <label>Staff 2 Loan Amount Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>