force-app/main/default/objects/Loan_Calculator__c/fields/Staff_2_Monthly_Payment_Auto__c.field-meta.xml
<CustomField>
    <fullName>Staff_2_Monthly_Payment_Auto__c</fullName>
    <description>Staff 2 Monthly Payment Auto</description>
    <inlineHelpText>Staff 2 Monthly Payment Auto</inlineHelpText>
    <label>Staff 2 Monthly Payment Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>