force-app/main/default/objects/Loan_Calculator__c/fields/Staff_3_Loan_Term_M_Auto__c.field-meta.xml
<CustomField>
    <fullName>Staff_3_Loan_Term_M_Auto__c</fullName>
    <description>Staff 3 Loan Term M  Auto</description>
    <label>Staff 3 Loan Term M  Auto</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>