force-app/main/default/objects/Loan_Calculator__c/fields/Staff_3_Loan_Term_Y_Auto__c.field-meta.xml
<CustomField>
    <fullName>Staff_3_Loan_Term_Y_Auto__c</fullName>
    <description>Staff 3 Loan Term Y Auto</description>
    <label>Staff 3 Loan Term Y Auto</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>