force-app/main/default/objects/Loan_Calculator__c/fields/Stamp_Duty_Security_Documents__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Security_Documents__c</fullName>
    <label>Stamp Duty  (Security Documents)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>