force-app/main/default/objects/Loan_Calculator__c/fields/Supplementary_Card_Holder_Requested_Limi__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Card_Holder_Requested_Limi__c</fullName>
    <label>Supplementary Card Holder Requested Limi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>