force-app/main/default/objects/Loan_Calculator__c/fields/Total_Auto_Loan_Fees_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Auto_Loan_Fees_Charges__c</fullName>
    <label>Total Auto Loan Fees &amp; Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>