force-app/main/default/objects/Loan_Calculator__c/fields/Total_Closing_Cost_Payable_by_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Total_Closing_Cost_Payable_by_Applicant__c</fullName>
    <label>Total Closing Cost Payable by Applicant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>