force-app/main/default/objects/Loan_Calculator__c/fields/Total_Closing_Costs_Financed_by_JN_Numb__c.field-meta.xml
<CustomField>
    <fullName>Total_Closing_Costs_Financed_by_JN_Numb__c</fullName>
    <label>Total Closing Costs Financed by JN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>