force-app/main/default/objects/Loan_Calculator__c/fields/Total_Interest_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Payment__c</fullName>
    <label>Total Interest Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>