force-app/main/default/objects/Loan_Calculator__c/fields/Total_Loan_Savings_Balance__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_Savings_Balance__c</fullName>
    <label>Total Loan Savings Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>