force-app/main/default/objects/Loan_Calculator__c/fields/Total_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly__c</fullName>
    <label>Total Monthly Loan Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>