force-app/main/default/objects/Loan_Calculator__c/fields/Total_Monthly_P_I_Loan_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_P_I_Loan_Payment_Number__c</fullName>
    <label>Total Monthly P&amp; I Loan Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>