force-app/main/default/objects/Loan_Calculator__c/fields/Total_unsecured_Loan_Fee_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_unsecured_Loan_Fee_Charges__c</fullName>
    <label>Total unsecured Loan Fee &amp; Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>