force-app/main/default/objects/Loan_Calculator__c/fields/TotalClosingCost_PayableApplicant_Number__c.field-meta.xml
<CustomField>
    <fullName>TotalClosingCost_PayableApplicant_Number__c</fullName>
    <description>Total Closing Costs Payable by Applicant</description>
    <label>Total Closing Costs Payable by Applicant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>