force-app/main/default/objects/Loan_Calculator__c/fields/Type_of_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Card__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>