force-app/main/default/objects/Loan_Calculator__c/fields/Type_of_Life_Insurance_to_be_Applied__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Life_Insurance_to_be_Applied__c</fullName>
    <label>Type of Life Insurance to be Applied</label>
    <picklist>
        <picklistValues>
            <fullName>None</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>JN Life Single Life Coverage</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Assigned Life Insurance Policy</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>