force-app/main/default/objects/Loan_Calculator__c/fields/Type_of_LOC__c.field-meta.xml
<CustomField>
    <fullName>Type_of_LOC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type of LOC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>