force-app/main/default/objects/Loan_Calculator__c/fields/Unsecure_Fee_Include_in_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unsecure_Fee_Include_in_Loan_Amount__c</fullName>
    <label>Unsecure Fee Include in Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>