force-app/main/default/objects/Loan_Calculator__c/fields/Unsecure_Include_in_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unsecure_Include_in_Loan_Amount__c</fullName>
    <label>Unsecure Include in Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (Include in Loan Amount)</fullName>
            </value>
            <value>
                <fullName>No (Paid by the Applicant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>