force-app/main/default/objects/Loan_Calculator__c/fields/Unsecure_Indcate_applicable_process_fee__c.field-meta.xml
<CustomField>
    <fullName>Unsecure_Indcate_applicable_process_fee__c</fullName>
    <label>Unsecure Indcate applicable process fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>