force-app/main/default/objects/Loan_Calculator__c/fields/Unsecure_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unsecure_Interest_Rate__c</fullName>
    <label>Unsecure Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>