force-app/main/default/objects/Loan_Calculator__c/fields/unsecure_Jn_Life_Creditor_Life_Insurance__c.field-meta.xml
<CustomField>
    <fullName>unsecure_Jn_Life_Creditor_Life_Insurance__c</fullName>
    <label>unsecure Jn Life Creditor Life Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>