force-app/main/default/objects/Loan_Calculator__c/fields/unsecure_JN_Staff2_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>unsecure_JN_Staff2_Loan_Amount__c</fullName>
    <label>JN Staff2 Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>