force-app/main/default/objects/Loan_Calculator__c/fields/Unsecure_JN_Staff_1_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unsecure_JN_Staff_1_Loan_Amount__c</fullName>
    <label>JN Staff 1 Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>