force-app/main/default/objects/Loan_Calculator__c/fields/unsecure_JN_Staff_2_Monthly_Loan_Payment__c.field-meta.xml
<CustomField>
    <fullName>unsecure_JN_Staff_2_Monthly_Loan_Payment__c</fullName>
    <label>JN Staff 2 Monthly Loan Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>